Removing invalid characters and fixing book display when title wraps to second line.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -128,7 +128,7 @@ nav.main {
 .book {
   float: left;
   width: 350px;
-  height: 200px;
+  height: 220px;
   margin: 2.5em 3em 0 0;
   box-sizing: border-box;
   cursor: pointer;
